tests/compile_fail/message_trait/engine/uci_new_game.rs
fn a(_: impl ruci::engine::traits::Message) {}
fn b(m: ruci::UciNewGame) {
    a(m);
}

fn main() {}